# vortex-mod-gofile

./: Cargo.toml  README.md  plugin.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
src/: api_client.rs  error.rs  lib.rs  plugin_api.rs  url_matcher.rs
tests/: api_fixtures.rs  wasm_smoke.rs
tests/fixtures/: 01_account_token.json  02_account_error.json  03_folder_single_file.json  04_folder_multi_files.json  05_folder_with_subfolder.json  06_folder_unicode_filename.json  07_folder_not_found.json  08_folder_password_required.json  09_folder_empty.json
