[package]
name = "vortex-mod-gofile"
version = "1.0.0"
edition = "2021"
description = "Gofile WASM plugin for Vortex — public folder/file resolution via the Gofile JSON API (guest token)"
license = "GPL-3.0"
authors = ["vortex-community"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
thiserror = "2.0"

[dev-dependencies]
extism = "1.0"
rstest = "0.24"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
